fixing labeling overlapping in accordion selected options

--- a/avBooth/accordion-selected-option-directive/accordion-selected-option-directive.less
+++ b/avBooth/accordion-selected-option-directive/accordion-selected-option-directive.less
@@ -46,6 +46,7 @@
   .show-value {
     font-weight: normal;
     font-size: 12pt;
+    padding-top: 30px;
   }
 
   .show-remove {
@@ -61,17 +62,12 @@
   span.label {
     position: absolute;
     top: 9px;
-    right: 2%;
+    left: 2%;
   }
 
   &:hover {
     color: white;
     background-color: @brand-danger;
-
-
-    span.label {
-      display: none;
-    }
 
     .show-remove {
       display: block !important;
